# java-rust-webrtc

./: .gitignore  README.md  pom.xml
.github/workflows/: build.yml
demo-code/: pom.xml
demo-code/src/main/java/io/github/kinsleykajiva/: AudioTranscoderDemo.java  IceRestartDemo.java  IceTcpActivePassiveDemo.java  IceTcpDemo.java  Main.java  PlayFromDiskH26xDemo.java  PlayFromDiskPlaylistControlDemo.java  PlayFromDiskRenegotiationDemo.java  PlayFromDiskVpxDemo.java  RtpToWebRtcDemo.java  StatsDemo.java  SupportedCodecs.java  TrickleIceDemo.java
demo-desktop/: pom.xml
demo-desktop/src/main/java/io/github/kinsleykajiva/desktop/: CameraCaptureDemo.java  EchoTestDriver.java  ListDevices.java  MicrophoneCaptureDemo.java  VideoCallApp.java
desktop/: pom.xml
desktop/src/main/java/io/github/kinsleykajiva/webrtc/desktop/: BitrateConfig.java
docs/: README.md  api-reference.md  architecture.md  data-channels.md  deployment.md  desktop.md  getting-started.md  ice-and-transport.md  media-tracks.md  play-from-disk.md  port-allocator.md  stats.md  trickle-ice.md
rust-webrtc-ffi/: Cargo.toml  build.rs  cbindgen.toml  webrtc_ffi.h
rust-webrtc-ffi/src/: lib.rs
rust-webrtc/rtc/rtc-datachannel/src/message/: message_channel_close.rs
rust-webrtc/rtc/rtc-sdp/src/description/: common.rs  media.rs  mod.rs
rust-webrtc/rtc/rtc-sdp/src/direction/: direction_test.rs  mod.rs
rust-webrtc/rtc/rtc/src/peer_connection/configuration/: media_engine.rs
rust-webrtc/rtc/rtc/src/peer_connection/transport/: mod.rs
(+6 files in other folders)
