[package]
name = "rust-webrtc-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
webrtc = { path = "../rust-webrtc" }
rtc = { path = "../rust-webrtc/rtc/rtc" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
once_cell = "1"
bytes = "1"
lazy_static = "1.4.0"

[build-dependencies]
cbindgen = "0.26.0"
